--- a/package.json
+++ b/package.json
@@ -2,20 +2,28 @@
   "name": "typescript-2026",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "keywords": [],
+  "homepage": "https://github.com/Bysantosj17/typescript-2026#readme",
+  "bugs": {
+    "url": "https://github.com/Bysantosj17/typescript-2026/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bysantosj17/typescript-2026.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "author": "",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Bysantosj17/typescript-2026/issues"
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/Bysantosj17/typescript-2026#readme"
+  "dependencies": {
+    "node-cron": "^4.2.1",
+    "sweetalert2": "^11.26.17"
+  },
+  "devDependencies": {
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1"
+  }
 }
